<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UpdateActivity">
    <EditText
        android:id="@+id/title"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_recyclerview"
        android:ems="10"
        android:hint="@string/nameIn"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#1B5E20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <EditText
        android:id="@+id/description"
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_recyclerview"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/descIn"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#1B5E20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">
        <Button
            android:id="@+id/update_note"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#AAAAAA"
            android:text="@string/reload"
            android:textColor="#4E342E"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/delete_note"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#AAAAAA"
            android:text="@string/delete"
            android:textColor="#4E342E"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>