<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/mLayout"
    tools:context=".view.AddNotesActivity">
    <EditText
        android:id="@+id/title_edit"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_recyclerview"
        android:ems="10"
        android:hint="@string/nameIn"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <EditText
        android:id="@+id/description_edit"
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/shape_recyclerview"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/descIn"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit" />
    <Button
        android:id="@+id/add_note"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#AAAAAAAA"
        android:text="@string/descCreate"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_edit"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>